--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
   --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
 
-  --logo-bright:0; --logo-glow:0;
+  /* Live-tuned during splash */
+  --logo-bright:0;   /* 0..1 */
+  --logo-glow:0;     /* 0..1 */
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%}
@@ -26,7 +28,7 @@ body{
   overflow-x:hidden;
 }
 
-/* Background + faint grain */
+/* Background + faint grain to avoid banding */
 .bg-cosmos{
   position:fixed; inset:-15% -15% -15% -15%; z-index:-4; pointer-events:none;
   background:
@@ -47,7 +49,7 @@ body{
   opacity:.22; mix-blend-mode:overlay;
 }
 
-/* ===== VEIL ===== */
+/* ===== VEIL: rectangles are visible immediately (no spawning) ===== */
 .veil{
   position:fixed; inset:0; z-index:30; pointer-events:none;
   display:grid; grid-template-columns:repeat(22,1fr); grid-template-rows:repeat(12,1fr);
@@ -65,6 +67,8 @@ body{
   transform:translateX(-60%) rotate(12deg); animation:sh 9s linear infinite;
 }
 @keyframes sh{to{transform:translateX(120%) rotate(12deg)}}
+
+/* Flip-cascade for removal */
 .tile.flip{
   transform-origin:50% 50% -5px;
   transform:rotateY(88deg) translateZ(40px) scale(.92);
@@ -82,6 +86,7 @@ body{
 .splash.is-hidden{opacity:0; visibility:hidden}
 .splash__stage{position:relative; display:grid; place-items:center; gap:14px}
 
+/* LOGO: only the logo shape, plus a thin outline that follows the shape */
 .logo-stack{position:relative; display:grid; place-items:center}
 .logo-mask{
   width:min(46vw, 340px); height:min(46vw,340px);
@@ -100,13 +105,20 @@ body{
 }
 .outline{
   position:absolute; inset:0; pointer-events:none; opacity:.7;
+  /* ultra-thin conic sweep, masked ONLY by the logo shape */
   background:conic-gradient(from 0deg, rgba(17,177,255,0), rgba(140,240,255,.95) 8%, rgba(17,177,255,0) 11% 100%);
   -webkit-mask:url("assets/logo.png") center/contain no-repeat;
           mask:url("assets/logo.png") center/contain no-repeat;
   filter:blur(.45px);
   animation:spin 8.5s linear infinite;
 }
-@keyframes softPulse{ 0%{transform:translateY(0) scale(1)} 20%{transform:translateY(-0.6px) scale(1.012)} 40%{transform:none} 60%{transform:translateY(-0.4px) scale(1.008)} 100%{transform:none} }
+@keyframes softPulse{
+  0%   { transform:translateY(0) scale(1) }
+  20%  { transform:translateY(-0.6px) scale(1.012) }
+  40%  { transform:translateY(0) scale(1) }
+  60%  { transform:translateY(-0.4px) scale(1.008) }
+  100% { transform:translateY(0) scale(1) }
+}
 @keyframes spin{to{transform:rotate(360deg)}}
 @media (max-width:900px){ .logo-mask{ width:210px; height:210px } }
 
@@ -141,14 +153,15 @@ body{
 .page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
 
-/* Header */
+/* Header: logo left, title/tagline centered */
 header{
-  position:relative; /* car/trail positioning context */
   display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px;
   padding:12px 0 22px; border-bottom:1px solid var(--line)
 }
 .header-left{display:flex;align-items:center}
-.logo{ width:112px; height:112px; position:relative; }
+.logo{
+  width:112px; height:112px; position:relative;
+}
 .logo img{width:100%;height:100%;object-fit:cover;mix-blend-mode:screen;opacity:.98}
 .header-center{ text-align:center }
 .header-center h1{
@@ -157,7 +170,7 @@ header{
   -webkit-background-clip:text;background-clip:text;color:transparent;
 }
 .header-center p{color:#a9bce6;font-size:18px;margin-top:8px}
-.header-right{width:112px}
+.header-right{width:112px} /* spacer for true centering */
 
 /* Main */
 main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:36px;padding:28px 0}
@@ -174,7 +187,7 @@ li{margin-bottom:8px}
 .apply-btn{display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif}
 .note{font-size:12.5px;color:var(--muted);margin-top:8px}
 
-/* Terms card */
+/* Terms card (compact mobile) */
 .card{
   --gd:rgba(20,30,55,.86);
   position:relative; flex:1 1 420px;
@@ -196,7 +209,7 @@ li{margin-bottom:8px}
 @keyframes cardScan{0%{transform:translateY(0); opacity:0} 8%{opacity:.8} 40%{transform:translateY(calc(100% - 28px)); opacity:.8} 48%{opacity:0} 100%{opacity:0}}
 a:any-link{color:#a8dfff} a:visited{color:#a8dfff}
 
-/* Footer */
+/* Footer dock */
 footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, rgba(6,10,20,.55), rgba(6,10,20,.35)); backdrop-filter:saturate(130%) blur(6px); border-top:1px solid rgba(150,190,255,.12) }
 .footer-row{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto }
 .dock{ display:flex; gap:10px; flex-wrap:wrap }
@@ -205,54 +218,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 .chip a{color:#cfe6ff; text-decoration:none}
 .chip a:hover{text-decoration:underline}
 
-/* ===== F1 CAR & MONEY TRAIL ===== */
-.f1-layer{ position:absolute; left:0; right:0; bottom:0; height:0; overflow:visible; pointer-events:none; }
-.f1-car{
-  position:absolute;
-  left:-140px; bottom:-11px; width:88px;
-  filter: drop-shadow(0 6px 14px rgba(17,177,255,.28));
-  opacity:0;
-}
-.f1-car.go{ opacity:1; animation: f1-drive 2.5s linear forwards; } /* linear = constant speed */
-
-@keyframes f1-drive{ from{ left:-140px } to{ left:calc(100% + 220px) } }
-
-/* Particle trail */
-.f1-particle{ position:absolute; bottom:-10px; will-change:transform,opacity; pointer-events:none }
-.f1-coin{
-  width:12px; height:12px; border-radius:50%;
-  background:
-    radial-gradient(circle at 30% 28%, rgba(255,255,255,.9), rgba(255,255,255,0) 42%),
-    radial-gradient(circle, #ffd54a 0 62%, #c59d00 63% 100%);
-  box-shadow:0 0 10px rgba(255,213,74,.5);
-  animation: coin-rise 1.1s ease-out forwards;
-}
-.f1-bill{
-  width:18px; height:12px; border-radius:3px;
-  background:
-    radial-gradient(circle at 28% 50%, rgba(255,255,255,.7), transparent 50%),
-    linear-gradient(180deg, #3fe887, #17c56f);
-  border:1px solid rgba(0,0,0,.18);
-  box-shadow:0 0 10px rgba(63,232,135,.42);
-  transform-origin:50% 50%;
-  animation: bill-rise 1.1s ease-out forwards;
-}
-@keyframes coin-rise{
-  from{ transform:translate(0,0) rotate(0deg); opacity:.95 }
-  to  { transform:translate(4px,-26px) rotate(300deg); opacity:0 }
-}
-@keyframes bill-rise{
-  from{ transform:translate(0,0) rotate(0deg); opacity:.95 }
-  to  { transform:translate(-6px,-30px) rotate(-14deg); opacity:0 }
-}
-
-/* Reduced motion */
-@media (prefers-reduced-motion: reduce){
-  .f1-car.go{ animation-duration:0.01ms; animation-iteration-count:1 }
-  .f1-particle{ animation:none; opacity:0 }
-}
-
-/* Responsive tweaks */
+/* Responsive */
 @media (max-width:960px){
   .wrap{padding:16px}
   header{grid-template-columns:auto 1fr auto}
@@ -274,7 +240,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   <div class="bg-cosmos"></div>
   <div class="bg-grain"></div>
 
-  <!-- Veil -->
+  <!-- Rectangles (visible immediately) -->
   <div class="veil shimmer" id="veil" aria-hidden="true"></div>
 
   <!-- Splash -->
@@ -307,42 +273,6 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
           <p>Simple Business Funding</p>
         </div>
         <div class="header-right"></div>
-
-        <!-- Layer that holds the car and particles -->
-        <div class="f1-layer" id="f1-layer" aria-hidden="true">
-          <!-- Brand-neutral F1 SVG (no trademarks/words) -->
-          <div class="f1-car" id="f1">
-            <svg viewBox="0 0 160 60" width="160" height="60" aria-hidden="true">
-              <!-- rear wing -->
-              <rect x="4" y="20" width="22" height="12" rx="2" fill="#8fe0ff" opacity=".7"/>
-              <!-- floor -->
-              <path d="M6 36 L150 36 L156 30 L150 26 L56 26 L36 30 L6 30 Z" fill="#0a0f16"/>
-              <!-- body & sidepods -->
-              <path d="M24 30 L64 28 L88 20 L118 20 L144 28 L154 30 L144 32 L118 36 L88 30 L64 32 L24 32 Z"
-                    fill="url(#carGrad)" stroke="#5ee3ff" stroke-width="1"/>
-              <!-- nose tip -->
-              <path d="M120 20 L140 20 L148 26 L120 26 Z" fill="#1f2d39"/>
-              <!-- halo -->
-              <path d="M88 22 c8 0 14 4 14 8 c-4 4 -10 6 -14 6 c-4 0 -10 -2 -14 -6 c0 -4 6 -8 14 -8 Z" fill="#0e1b27"/>
-              <!-- wheels -->
-              <g fill="#0b1220" stroke="#a8dfff" stroke-width="2">
-                <circle cx="44" cy="44" r="10"/>
-                <circle cx="126" cy="44" r="10"/>
-              </g>
-              <!-- teal stripes -->
-              <path d="M30 33 L110 33" stroke="#00e0c8" stroke-width="3" opacity=".9"/>
-              <path d="M34 35 L116 35" stroke="#18a4b5" stroke-width="2" opacity=".7"/>
-              <!-- defs -->
-              <defs>
-                <linearGradient id="carGrad" x1="0" y1="0" x2="1" y2="0">
-                  <stop offset="0" stop-color="#0f131b"/>
-                  <stop offset=".45" stop-color="#1d232e"/>
-                  <stop offset="1" stop-color="#0f141b"/>
-                </linearGradient>
-              </defs>
-            </svg>
-          </div>
-        </div>
       </header>
 
       <main>
@@ -373,7 +303,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
           </div>
           <div class="row">
             <span class="label"><span class="icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1 .3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
             </span> Phone</span>
             <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
           </div>
@@ -389,7 +319,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
             <a href="mailto:info@f1cash.net">info@f1cash.net</a>
           </span>
           <span class="chip">
-            <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1 .3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+            <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
             <a href="tel:+12294484389">+1 229-448-4389</a>
           </span>
         </div>
@@ -406,15 +336,17 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   var root = document.documentElement;
   var splash = document.getElementById('splash');
   var approved = document.getElementById('approved');
+  var label = document.getElementById('label');
   var bar = document.getElementById('bar');
   var veil = document.getElementById('veil');
 
-  /* Build veil tiles */
+  // Build veil tiles immediately with precomputed delays for the flip cascade
   (function buildVeil(){
     var cols = 22, rows = 12, frag = document.createDocumentFragment();
     for (var r=0;r<rows;r++){
       for (var c=0;c<cols;c++){
         var t = document.createElement('div'); t.className='tile';
+        // stagger by distance from center
         var dist = Math.hypot(c-cols/2, r-rows/2);
         var delay = Math.round(dist*22 + (Math.random()*50));
         t.style.setProperty('--d', delay+'ms');
@@ -429,83 +361,38 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
     setTimeout(function(){ veil.remove(); }, 1100);
   }
 
-  /* ===== F1 run with consistent trail spacing ===== */
-  function startF1Run(){
-    var header = document.querySelector('header');
-    var layer = document.getElementById('f1-layer');
-    var car = document.getElementById('f1');
-    if (!header || !layer || !car) return;
-
-    // start the CSS linear animation
-    car.classList.remove('go'); void car.offsetWidth; car.classList.add('go');
-
-    var DURATION = 2500;           // ms
-    var headerBox = header.getBoundingClientRect();
-    var startX = -140;
-    var endX   = headerBox.width + 220;
-    var distance = endX - startX;
-
-    // particles every N pixels the car travels:
-    var STEP = Math.max(22, Math.min(36, headerBox.width/30)); // responsive range 22..36px
-    var nextAt = startX + STEP;
-
-    var start = performance.now();
-
-    function spawn(x){
-      var el = document.createElement('span');
-      var isCoin = Math.random() < 0.65;
-      el.className = 'f1-particle ' + (isCoin ? 'f1-coin' : 'f1-bill');
-      el.style.left = x + 'px';
-      // tiny, *bounded* jitter so it still reads as a smooth trail
-      var jitter = isCoin ? (Math.random()*2-1)*1.5 : (Math.random()*2-1)*2;
-      el.style.bottom = (-10 + jitter) + 'px';
-      layer.appendChild(el);
-      setTimeout(function(){ el.remove(); }, 1200);
-    }
-
-    function step(now){
-      var t = Math.min(1, (now - start) / DURATION); // linear progress (matches CSS)
-      var posX = startX + distance * t;
-
-      while (posX >= nextAt && nextAt <= endX){
-        spawn(nextAt);
-        nextAt += STEP;
-      }
-      if (t < 1) requestAnimationFrame(step);
-    }
-    requestAnimationFrame(step);
-  }
-
   function revealPage(){
     document.body.classList.add('page-on');
     splash.classList.add('is-fading');
     splash.addEventListener('transitionend', function onEnd(e){
-      if (e.propertyName === 'opacity'){
-        splash.removeEventListener('transitionend', onEnd);
-        splash.classList.add('is-hidden');
-        splash.remove();      // remove splash to avoid any lingering box around logo
-        startF1Run();         // go!
-      }
+      if (e.propertyName === 'opacity'){ splash.removeEventListener('transitionend', onEnd); splash.classList.add('is-hidden'); }
     });
   }
 
   function approveSequence(){
+    // show approved under the AUTHORIZING label, then complete to 100%
     approved.style.display='flex';
+    // complete the bar smoothly
     bar.style.transition='width 1s ease';
     bar.style.width='100%';
+    // brighten logo a touch more
     root.style.setProperty('--logo-bright','1');
     root.style.setProperty('--logo-glow','1');
+    // flip rectangles and reveal
     flipOutVeil();
     setTimeout(revealPage, 700);
   }
 
-  // Progress to 85%, then approve
+  // Smooth progress to 85% (steady pace), then approve
   (function run(){
-    var start = performance.now(), DURATION = 3200, APPROVE_AT = 0.85;
+    var start = performance.now(),
+        DURATION = 3200,       // slower, steady
+        APPROVE_AT = 0.85;     // approve at 85%
     function tick(now){
       var t = Math.min(1, (now - start) / DURATION);
       var shown = Math.min(t, APPROVE_AT);
       bar.style.width = (shown*100).toFixed(1) + '%';
+      // glow ramp—brighter earlier but still smooth
       var glow = Math.pow(t, 0.75);
       root.style.setProperty('--logo-bright', glow.toFixed(3));
       root.style.setProperty('--logo-glow',   glow.toFixed(3));
@@ -515,7 +402,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
     requestAnimationFrame(tick);
   })();
 
-  // Optional skip
+  // Optional skip: tap to approve immediately (kept smooth)
   document.addEventListener('pointerdown', function once(){
     approveSequence();
     document.removeEventListener('pointerdown', once);
